# tr-05-serverless-sumo-logic-log-management

./: .gitignore  Dockerfile  Makefile  Pipfile  README.md  build.sh  module_type.json.sample  pyproject.toml
.github/workflows/: test.yml
code/: app.py  config.py  container_settings.json  requirements.txt
code/api/: client.py  enrich.py  errors.py  health.py  mapping.py  respond.py  utils.py  watchdog.py
code/tests/unit/: conftest.py  test_app.py
code/tests/unit/api/: test_authorization.py  test_enrich.py  test_health.py  test_watchdog.py
scripts/: entrypoint.py  pq.py  start.py  syslog-ng.conf  uwsgi.ini
